--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
     "site": "https://ignat.fun"
   },
   "scripts": {
-    "dev": "cross-env TS_NODE_PROJECT=\"webpack/tsconfig.json\" webpack serve -c webpack/config.ts",
+    "dev": "webpack serve -c webpack/config.ts",
     "pretty": "prettier --write .",
     "lint": "eslint .",
-    "lintFix": "eslint --fix ."
+    "lintFix": "eslint --fix .",
+    "test": "tsc -v"
+  },
+  "dependencies": {
+    "axios": "^1.3.6",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@types/html-webpack-plugin": "^3.2.6",
+    "@types/node": "^18.15.13",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
-    "cross-env": "^7.0.3",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -27,7 +32,7 @@
     "prettier-eslint": "^15.0.1",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
     "webpack": "^5.80.0",
     "webpack-cli": "^5.0.2",
     "webpack-dev-server": "^4.13.3"
